--- a/src/app/mainroot/browsevenues/browsevenuesroot/browsevenuesroot.component.html
+++ b/src/app/mainroot/browsevenues/browsevenuesroot/browsevenuesroot.component.html
@@ -1,4 +1,7 @@
 <!--harry's code-->
+<script>
+  fbq('track', 'ViewContent');
+</script>
 <div id="filter" class="d-flex flex-column justify-content-center py-5">
   <div class="container">
     <div class=" row d-flex justify-content-between m-3 firstline">
