--- a/src/app/mainroot/roompage/roompage.component.scss
+++ b/src/app/mainroot/roompage/roompage.component.scss
@@ -59,6 +59,13 @@ p {
 
 $color-primary: rgb(83,139,197);
 
+.card-min-spend{
+  letter-spacing: 1px;
+  font-size: 1rem;
+  font-weight: 100;
+  color: $color-primary;
+}
+
 .card-container {
   backface-visibility: hidden;
   overflow: hidden;
