--- a/src/app/mainroot/landingpage/landingpage.component.html
+++ b/src/app/mainroot/landingpage/landingpage.component.html
@@ -15,7 +15,6 @@
             autofocus
             (change)="browse()"
             name="cityselect"
-            ng-init="city[0]"
             ngModel>
             <option value="">Select Your City</option>
             <option *ngFor="let city of cities"
@@ -34,12 +33,11 @@
         </div>
         <form *ngIf="!choicesload" #selectform="ngForm">
           <select
-            id="cityselect"
+            id="cityselectlarge"
             class="mt-3 mb-5 text-white"
             autofocus
             (change)="browse()"
             name="cityselect"
-            ng-init="city[0]"
             ngModel>
             <option value="">Select Your City</option>
             <option *ngFor="let city of cities"
