--- a/src/app/mainroot/landingpage/landingpage.component.html
+++ b/src/app/mainroot/landingpage/landingpage.component.html
@@ -31,12 +31,12 @@
         <div *ngIf="choicesload" class="spinner-container">
           <div class="spinner"></div>
         </div>
-        <form *ngIf="!choicesload" #selectform="ngForm">
+        <form *ngIf="!choicesload" #selectformlarge="ngForm">
           <select
             id="cityselectlarge"
             class="mt-3 mb-5 text-white"
             autofocus
-            (change)="browse()"
+            (change)="browselarge()"
             name="cityselect"
             ngModel>
             <option value="">Select Your City</option>
