--- a/src/app/venueadmin/parentadminview/venueadminparentview/venueprofile/venueprofile.component.html
+++ b/src/app/venueadmin/parentadminview/venueadminparentview/venueprofile/venueprofile.component.html
@@ -53,7 +53,7 @@
   <div class="col-12">
     <form  #descriptioninputform="ngForm">
               <textarea class="form-control"
-                        id="descriptioninput"
+                        id="descriptioninputs"
                         name="descriptioninput"
                         (ngModelChange)="descriptioncounter()"
                         (change)="updatevenue()"
